//Denna fil är inte C#, den är språk oberoende och kan användas till mängder av olika "språk".
//Den agerar som protokoll defentition

syntax = "proto3";

option csharp_namespace = "GRPCServer";


service Customer { //Detta blir en typ av endpoint
	rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
}

message CustomerLookupModel {
	int32 userId = 1;
}

message CustomerModel { //Siffran används så grpc vet i viken ordning data kommer
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	bool isAlive = 4;
	int32 age = 5;
}